--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 /* normalize css problem fixed */
@@ -48,4 +49,117 @@ h1 {
 
 main {
   flex-grow: 1;
+}
+header {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  height: 100vh;
+  background-color: #020716;
+  color: #fff;
+  padding: 50px;
+}
+header h1 {
+  font-size: 60px;
+  letter-spacing: 3px;
+}
+header p {
+  font-size: 25px;
+  line-height: 39px;
+  font-weight: 300;
+  letter-spacing: 3px;
+}
+.home__scrll-box {
+  display: grid;
+  place-items: center;
+  height: 35px;
+  overflow: hidden;
+}
+.home__scroll-box i {
+  font-size: 1.5rem;
+  animation: scroll-down 3s infinite;
+}
+
+@keyframes scroll-down {
+  0% {
+    transform: translateY(-1rem);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(1rem);
+    opacity: 0;
+  }
+}
+.Rolls-Royce {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: ;
+  align-items: center;
+  position: relative;
+}
+.rolc-roys__video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+.Rolls-Royce h1 {
+  margin-top: 55px;
+  font-size: 55px;
+  color: #fff;
+  letter-spacing: 3px;
+  font-weight: 700;
+}
+.Rolls-Royce__subtitle {
+  text-align: center;
+  background-color: #00000093;
+  padding: 20px;
+  border-radius: 15px;
+  width: 800px;
+  color: #fff;
+  position: absolute;
+  line-height: 30px;
+  top: 40%;
+  font-size: 24px;
+  font-weight: 400;
+}
+.btns {
+  margin-bottom: 20px;
+  display: flex;
+  gap: 2rem;
+}
+.btn {
+  padding: 15px 60px;
+  border: none;
+  border-radius: 10px;
+  font-size: 19px;
+  letter-spacing: 2px;
+}
+.Rolls-Royce__btn-1 {
+  background-color: #08153d;
+  color: #fff;
+}
+.Rolls-Royce__btn-1:hover {
+  border: 2.5px solid #08153d;
+  background-color: #fff;
+  color: #08153d;
+  cursor: pointer;
+}
+.Rolls-Royce__btn {
+  border: 2.5px solid #08153d;
+  cursor: pointer;
+  color: #08153d;
+  &:hover {
+    background-color: #08153d;
+    color: #fff;
+  }
 }
